--- a/1/EomTool/EomToolWeb/Views/Advertisers/Show.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Advertisers/Show.cshtml
@@ -36,6 +36,10 @@
             <td>@Html.LabelFor(m => m.prev_open_balance)</td>
             <td class="bold">@Html.DisplayFor(m => m.prev_open_balance)</td>
         </tr>
+        <tr>
+            <td>@Html.LabelFor(m => m.qb_name)</td>
+            <td class="bold">@Html.DisplayFor(m => m.qb_name)</td>
+        </tr>
     </table>
 </fieldset>
 
