--- a/1/EomTool/EomToolWeb/Views/Advertisers/Edit.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Advertisers/Edit.cshtml
@@ -44,6 +44,10 @@
                 <td>@Html.LabelFor(m => m.prev_open_balance)</td>
                 <td>@Html.EditorFor(m => m.prev_open_balance)</td>
             </tr>
+            <tr>
+                <td>@Html.LabelFor(m => m.qb_name)</td>
+                <td>@Html.EditorFor(m => m.qb_name)</td>
+            </tr>
         </table>
         <br />
         <input type="submit" value="Save" />
