css adjustment - graybar

--- a/3/ClientPortal.Web/ClientPortal.Web/Content/foundation/app.css
+++ b/3/ClientPortal.Web/ClientPortal.Web/Content/foundation/app.css
@@ -53,6 +53,7 @@ select {
     margin-top: -3px;
 }
 
-.tabs.vertical dd, .tabs.vertical .tab-title {
+.tabs.vertical dd, .tabs.vertical .tab-title,
+.grayband .tabs dd.active, .grayband .tabs li.active {
     margin-top: 0;
 }
