--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Shared/DisplayTemplates/Date.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Shared/DisplayTemplates/Date.cshtml
@@ -1,3 +1,6 @@
-﻿@model System.DateTime
+﻿@model System.DateTime?
 
-@Model.ToShortDateString()
+@if (Model.HasValue)
+{
+    <text>@Model.Value.ToShortDateString()</text>
+}
