--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SimpleReports/Edit.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SimpleReports/Edit.cshtml
@@ -60,4 +60,5 @@
 }
 Notes:<br />
 Separate email addresses with commas.<br />
+If NextSend is blank, a report for the most recent completed timeframe will be included the next time reports are sent out.<br />
 If Timeframe-Months is greater than 0, Timeframe-Days is ignored.
