excel template updates

--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/TestReports.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/TestReports.cshtml
@@ -3,6 +3,7 @@
     var ajaxOpts_Profiles = RazorHelpers.GetAjaxOptions("searchProfilesTab", "navSearchProfiles");
     //var ajaxOpts_Reports = RazorHelpers.GetAjaxOptions("searchReportsTab");
     var ajaxOpts_Post = RazorHelpers.GetAjaxOptions("searchReportsTab", null, "Post");
+    var filename = Model.SearchProfileName.Replace(" ", "") + "_" + DateTime.Today.ToString("yyyyMMdd") + ".xlsx";
 }
 
 <h3>Test Spreadsheet</h3>
@@ -25,6 +26,10 @@ Start Day of Week: @((DayOfWeek)Model.StartDayOfWeek)
             <tr>
                 <td>@Html.Label("Months to include:")</td>
                 <td><input type="text" name="nummonths" value="10" /></td>
+            </tr>
+            <tr>
+                <td>@Html.Label("Filename:")</td>
+                <td><input type="text" name="filename" value="@filename" style="min-width:300px" /></td>
             </tr>
         </table>
         <br />
