--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/EditProfile.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/EditProfile.cshtml
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <td>@Html.LabelFor(m => m.SearchProfileName, "Profile Name")</td>
-                <td>@Html.EditorFor(m => m.SearchProfileName)</td>
+                <td style="min-width:300px">@Html.EditorFor(m => m.SearchProfileName)</td>
             </tr>
             <tr>
                 <td>@Html.LabelFor(m => m.StartDayOfWeek)</td>
