--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SimpleReports/Test.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SimpleReports/Test.cshtml
@@ -28,7 +28,7 @@
             </tr>
             <tr>
                 <td>@Html.Label("Send To")</td>
-                <td>@Html.Editor("sendto")</td>
+                <td style="min-width:300px">@Html.Editor("sendto")</td>
             </tr>
         </table>
         <br />
