--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SimpleReports/Edit.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SimpleReports/Edit.cshtml
@@ -26,7 +26,7 @@
             </tr>
             <tr>
                 <td>@Html.LabelFor(m => m.Email)</td>
-                <td>@Html.EditorFor(m => m.Email)</td>
+                <td style="min-width:300px">@Html.EditorFor(m => m.Email)</td>
             </tr>
             <tr>
                 <td>@Html.LabelFor(m => m.EmailCC)</td>
