--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SimpleReports/Edit.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SimpleReports/Edit.cshtml
@@ -59,6 +59,7 @@
     </fieldset>
 }
 Notes:<br />
-Separate email addresses with commas.<br />
-If NextSend is blank, a report for the most recent completed timeframe will be included the next time reports are sent out.<br />
-If Timeframe-Months is greater than 0, Timeframe-Days is ignored.
+The report will include stats up to the day before NextSend.<br />
+If NextSend is blank and Enabled is checked, a report for the most recent completed timeframe will be sent out tomorrow morning.<br />
+If Timeframe-Months is greater than 0, Timeframe-Days is ignored.<br />
+Multiple email addresses should be separated with commas.<br />
