--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SimpleReports/Test.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SimpleReports/Test.cshtml
@@ -8,7 +8,7 @@
     string filename = ViewBag.Filename;
     if (String.IsNullOrWhiteSpace(filename))
     {
-        filename = Model.ParentName.Replace(" ", "") + "_" + DateTime.Today.ToString("yyyyMMdd") + ".xlsx";
+        filename = Model.ParentName.Replace(" ", "") + "_" + end.ToString("yyyyMMdd") + ".xlsx";
     }
 }
 
@@ -53,7 +53,7 @@
             </tr>
         </table>
         <br />
-        <input type="submit" value="Send Email" />
+        <input type="submit" value="Send Test Email" />
         &nbsp;@Ajax.ActionLink("cancel", (String.IsNullOrWhiteSpace(redirectAction) ? "Index" : redirectAction), ajaxOptions)
     </fieldset>
 }
