sp kendogrid updates - from bar to area

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Index.cshtml
@@ -105,6 +105,8 @@
 @section head {
     <link href="~/Content/kendo/2014.2.903/kendo.common.min.css" rel="stylesheet" />
     <link href="~/Content/kendo/2014.2.903/kendo.bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/kendo/2014.2.903/kendo.dataviz.min.css" rel="stylesheet" />
+    <link href="~/Content/kendo/2014.2.903/kendo.dataviz.bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/index.css" rel="stylesheet" />
     <style>
         .k-grid tbody .k-grid .k-grid-header, .k-detail-cell .k-pager-wrap, .k-detail-cell .k-grid-footer
